Added class 3 starter

--- a/Classes/class_3/first.html
+++ b/Classes/class_3/first.html
@@ -8,38 +8,17 @@
 </head>
 <body>
     <div class="main-container">
-        <h1 id="welcome-text" class="inline-content">Welcome to my first page!</h1>
+        <h1 id="welcome-text" class="inline-content">I'm the Koala !</h1>
         <img class="inline-content" alt="Koala" height=200 width=200 src="https://www.savethekoala.com/sites/savethekoala.com/files/uploads/koala_donate.jpg"/>
         <hr>
-        <a href="www.google.com">Visit google!</a>
-        <p class="red-text">I am Eyal <br>And I love coding :)</p>
         <p>Here are my hobbies:</p>
         <ol id="hobbies-list">
-            <li><p>Python</p></li>
-            <li><p>Chocolate</p></li>
-            <li><p>Python</p></li>
+            <li><p>Bamboos</p></li>
+            <li><p>Sleeping</p></li>
+            <li><p>Climbing on trees</p></li>
         </ol>
-        <p>My favorite site is:<a href="https://slack.com">slack</a></p>
-
-        <div id="koalas-box">
-            <img src="https://www.savethekoala.com/sites/savethekoala.com/files/uploads/koala_donate.jpg"/>
-            <img src="https://www.savethekoala.com/sites/savethekoala.com/files/uploads/koala_donate.jpg"/>
-            <img src="https://www.savethekoala.com/sites/savethekoala.com/files/uploads/koala_donate.jpg"/>
-            <img src="https://www.savethekoala.com/sites/savethekoala.com/files/uploads/koala_donate.jpg"/>
-            <img src="https://www.savethekoala.com/sites/savethekoala.com/files/uploads/koala_donate.jpg"/>
-            <img src="https://www.savethekoala.com/sites/savethekoala.com/files/uploads/koala_donate.jpg"/>
-            <img src="https://www.savethekoala.com/sites/savethekoala.com/files/uploads/koala_donate.jpg"/>
-            <img src="https://www.savethekoala.com/sites/savethekoala.com/files/uploads/koala_donate.jpg"/>
-            <img src="https://www.savethekoala.com/sites/savethekoala.com/files/uploads/koala_donate.jpg"/>
-            <img src="https://www.savethekoala.com/sites/savethekoala.com/files/uploads/koala_donate.jpg"/>
-            <img src="https://www.savethekoala.com/sites/savethekoala.com/files/uploads/koala_donate.jpg"/>
-            <img src="https://www.savethekoala.com/sites/savethekoala.com/files/uploads/koala_donate.jpg"/>
-            <img src="https://www.savethekoala.com/sites/savethekoala.com/files/uploads/koala_donate.jpg"/>
-            <img src="https://www.savethekoala.com/sites/savethekoala.com/files/uploads/koala_donate.jpg"/>
-            <img src="https://www.savethekoala.com/sites/savethekoala.com/files/uploads/koala_donate.jpg"/>
-            <img src="https://www.savethekoala.com/sites/savethekoala.com/files/uploads/koala_donate.jpg"/>
-        </div>
+        <p>My favorite site is:<a href="https://www.nationalgeographic.com/animals/mammals/k/koala/">The Natures's koalas page</a></p>
     </div>
-    <button type="button" id="chat-button">Chat</button>
+
 </body>
 </html>
