Added class 3 middle

--- a/Classes/class_3/first.html
+++ b/Classes/class_3/first.html
@@ -18,6 +18,28 @@
             <li><p>Climbing on trees</p></li>
         </ol>
         <p>My favorite site is:<a href="https://www.nationalgeographic.com/animals/mammals/k/koala/">The Natures's koalas page</a></p>
+
+        <h2>Comments:</h2>
+        <div class="comments-container">
+            <ul class="comments-list">
+                <li class="comment">
+                    <p class="comment-title">I love your CV !</p>
+                    <p class="comment-content">I really love koalas, thanks for posting your life here !</p>
+                </li>
+                <li class="comment">
+                    <p  class="comment-title">I hate your CV !</p>
+                    <p  class="comment-content">I really hate koalas !</p>
+                </li>
+            </ul>
+            <form class="add-comment-form">
+                <label>Title: <br><input placeholder="Add a title..." type="text"></label>
+                <br>
+                <label>Content: <br><textarea placeholder="Add your comment..." cols="50" rows="3"></textarea></label>
+                <br>
+                <input type="submit" value="Add a comment">
+            </form>
+        </div>
+
     </div>
 
 </body>
